# Hexxagon

./: CMakeLists.txt  Coords.cpp  Coords.h  README.md  butMenu.cpp  butMenu.h  button.cpp  button.h  buttonFuncs.cpp  buttonFuncs.h  game.cpp  game.h  gamestate.h  hex.cpp  hex.h  main.cpp  map.cpp  map.h  menu.cpp  menu.h
resources/: results.txt
resources/savings/: 2023-09-03 15-01-50
